--- a/NoFood/NoFood.Api/package.json
+++ b/NoFood/NoFood.Api/package.json
@@ -9,6 +9,7 @@
   "author": "Amaury A. Costa",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "express": "^4.16.3"
   }
 }
