--- a/NoFood/NoFood.Ionic/ionic.config.json
+++ b/NoFood/NoFood.Ionic/ionic.config.json
@@ -3,5 +3,11 @@
   "integrations": {
     "cordova": {}
   },
+  "proxies": [
+    {
+      "path": "/v1",
+      "proxyUrl": "http://localhost:3000/api/"
+    }
+  ],
   "type": "ionic-angular"
 }
